@@ -1,5 +1,5 @@
-# Copyright (C) 2007, 2008, 2009, 2010 EPITA Research and Development
-# Laboratory (LRDE)
+# Copyright (C) 2007, 2008, 2009, 2010, 2013 EPITA Research and
+# Development Laboratory (LRDE).
 #
 # This file is part of Olena.
 #
@@ -18,6 +18,7 @@
 include $(top_srcdir)/milena/tests/tests.mk
 
 check_PROGRAMS =		\
+  bind				\
   image				\
   value
 
